# find-up

./: Cargo.toml  README.md  README.zh.md  justfile
.github/workflows/: publish.yml
fixtures/a/: package.json
fixtures/a/b/: package.json
fixtures/a/b/c/: package.json
fixtures/a/b/c/d/: package.json
src/: lib.rs
src/snapshots/: up_finder__tests__should_find_directory_in_parent_path.snap  up_finder__tests__should_find_files_when_searching_upward.snap  up_finder__tests__should_find_multiple_files_when_searching_upward.snap  up_finder__tests__should_not_find_files_when_searching_for_directories.snap
