[package]
authors       = ["ityuany <519495771@qq.com>"]
categories    = ["filesystem"]
description   = "Find files or directories upward in the directory tree."
documentation = "https://docs.rs/find_up"
edition       = "2024"
homepage      = "https://github.com/ityuany/find_up"
include       = ["src/**/*.rs", "Cargo.toml", "LICENSE", "README.md"]
keywords      = ["find", "search", "find_up"]
license       = "MIT"
name          = "find_up"
repository    = "https://github.com/ityuany/find_up"
version       = "0.0.1"

[dependencies]
rustc-hash = { version = "2.1.1" }


[dev-dependencies]
insta = { version = "1.42.2" }
