[package]
authors       = ["ityuany <519495771@qq.com>"]
categories    = ["filesystem"]
description   = "Find files or directories upward in the directory tree."
documentation = "https://docs.rs/up_finder"
edition       = "2024"
homepage      = "https://github.com/ityuany/up_finder"
include       = ["src/**/*.rs", "Cargo.toml", "LICENSE", "README.md"]
keywords      = ["find", "search", "find_up"]
license       = "MIT"
name          = "up_finder"
repository    = "https://github.com/ityuany/up_finder"
version       = "0.0.3"

[dependencies]
rustc-hash    = { version = "2.1.1" }
typed-builder = { version = "0.21.0" }


[dev-dependencies]
insta = { version = "1.42.2" }
